# LibCMaker_Dirent

./: .appveyor.yml  .travis.yml  CMakeLists.txt  README.md  cmr_build_dirent.cmake  lib_cmaker_dirent.cmake
.github/workflows/: LibCMaker_CI.yml
ci/: ci_lib_params.sh
cmake/: FindDirent.cmake  cmr_build_rules_dirent.cmake  cmr_find_package_dirent.cmake  cmr_get_download_params_dirent.cmake
cmake/modules/: cmr_build_rules_dirent.cmake  cmr_dirent_cmaker.cmake  cmr_dirent_get_download_params.cmake  cmr_get_download_params_dirent.cmake
cmake/modules/dirent-1.23.1/: CMakeLists.txt
example/TestCompileWithDirent/: CMakeLists.txt  README.md
patch/dirent-1.23.2.20210914/: CMakeLists.txt
samples/TestCompileWithDirent/: CMakeLists.txt
samples/TestCompileWithDirent/src/: example.cpp  example_test.cpp
samples/TestCompileWithDirent/test/: CMakeLists.txt
samples/ci_sample/: CMakeLists.txt
